data/derived/comb/progs/unify/prog7663.ml.out
Characters 297-315:
  removeZero (add ((padZero l1 l2) ));;
                  ^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int list * int list
